cmake_minimum_required(VERSION 3.21)

project(AdventOfCode2025)

add_executable(AoC2025)

target_sources(AoC2025
	PRIVATE
		aoc2025.cpp
		dayone.cpp
		daytwo.cpp
		daythree.cpp
		dayfour.cpp
		dayfive.cpp
		daysix.cpp
		dayseven.cpp
		dayeight.cpp
		daynine.cpp
		dayten.cpp
		dayeleven.cpp
		daytwelve.cpp
		util.cpp
)
